--- a/style.css
+++ b/style.css
@@ -432,6 +432,10 @@ side navbar */
   grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
 }
+.product-images img{
+  width: 100%;
+  height: auto;
+}
 
 .product-sections_input input {
   width: 95%;
@@ -440,3 +444,5 @@ side navbar */
   border-radius: 5px;
   border: solid black 1px;
 }
+
+   
