ca]hanges updated

--- a/style.css
+++ b/style.css
@@ -431,6 +431,7 @@ side navbar */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
+
 }
 .product-images img{
   width: 100%;
@@ -438,11 +439,17 @@ side navbar */
 }
 
 .product-sections_input input {
-  width: 95%;
   margin-bottom: 10px;
+  width: 100%;
+  max-width: 100%;
   padding: 10px;
+  box-sizing: border-box;
   border-radius: 5px;
   border: solid black 1px;
 }
 
-   
+  @media screen and (max-width:562px){
+    .sections{
+      grid-template-columns: 1fr 2fr;
+    }
+  }
